# bedrock-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
crates/addon/: Cargo.toml
crates/addon/src/: manifest.rs
crates/level/: Cargo.toml
crates/level/benches/: subchunk.rs  unpack.rs
crates/level/src/: key.rs  player.rs
crates/level/src/mojang/: db.rs  iter.rs
crates/level/tests/: simd.rs  test.rs
crates/network/: Cargo.toml
crates/network/src/: codec.rs  error.rs  lib.rs  listener.rs  motd.rs
crates/network/src/connection/: mod.rs
crates/network/src/connection/shard/: arc.rs
crates/network/src/transport/: connection.rs  listener.rs
crates/protocol/: Cargo.toml
crates/protocol/def/: versions.def.rs
crates/protocol/src/: lib.rs
crates/protocol/src/version/: mod.rs  versions.rs
crates/protocol/src/version/unknown/packets/: mod.rs
crates/protocol/src/version/v1001/: mod.rs
crates/protocol/src/version/v1001/enums/: connection_fail_reason.rs  level_sound_event_type.rs  mod.rs  movement_effect_type.rs
crates/protocol/src/version/v1001/packets/: boss_event.rs  client_bound_attribute_layer_sync.rs  client_bound_update_sound_data.rs  client_cache_blob_status.rs  graphics_parameter_override.rs  inventory_content.rs  inventory_transaction.rs  level_sound_event.rs  mob_armor_equipment.rs  mod.rs  party_destination_cookie_response.rs  send_party_destination_cookie.rs  server_bound_diagnostics.rs  server_presence_info.rs  start_game.rs  sub_chunk_request.rs
crates/protocol/src/version/v1001/types/: biome_noise_gradient_surface_data.rs  debug_shape.rs  inventory_action.rs  level_settings.rs  mod.rs
crates/protocol/src/version/v662/: mod.rs
crates/protocol/src/version/v662/enums/: abilities_index.rs  actor_block_sync_message_id.rs  actor_damage_cause.rs  actor_data_ids.rs  actor_event.rs  actor_flags.rs  actor_link_type.rs  actor_type.rs  agent_action_type.rs  animation_mode.rs  attribute_modifier_operation.rs  attribute_operands.rs  book_edit_action.rs  boss_event_update_type.rs  build_platform.rs  camera_shake_action.rs  camera_shake_type.rs  chat_restriction_level.rs  code_builder_storage.rs  command_block_mode.rs  command_origin_type.rs  command_output_type.rs  command_parameter_option.rs  command_permission_level.rs  complex_inventory_transaction_type.rs  connection_fail_reason.rs  container_enum_name.rs  container_id.rs  container_type.rs  crafting_data_entry_type.rs  data_item_type.rs  difficulty.rs  easing_type.rs  editor_world_type.rs  education_edition_offer.rs  enchant_type.rs  game_publish_setting.rs  game_type.rs  generator_type.rs  hud_element.rs  (+55 more)
crates/protocol/src/version/v662/packets/: actor_event.rs  actor_pick_request.rs  add_actor.rs  add_behaviour_tree.rs  add_item_actor.rs  add_painting.rs  add_player.rs  add_volume_entity.rs  agent_action_event.rs  agent_animation.rs  animate.rs  animate_entity.rs  anvil_damage.rs  automation_client_connect.rs  available_actor_identifiers.rs  available_commands.rs  biome_definition_list.rs  block_actor_data.rs  block_event.rs  block_pick_request.rs  book_edit.rs  boss_event.rs  camera.rs  camera_instruction.rs  camera_presets.rs  camera_shake.rs  change_dimension.rs  change_mob_property.rs  chunk_radius_updated.rs  client_bound_debug_renderer.rs  client_bound_map_item_data.rs  client_cache_blob_status.rs  client_cache_miss_response.rs  client_cache_status.rs  client_to_server_handshake.rs  code_builder.rs  code_builder_source.rs  command_block_update.rs  command_output.rs  command_request.rs  (+157 more)
crates/protocol/src/version/v662/types/: actor_link.rs  actor_runtime_id.rs  actor_unique_id.rs  adventure_settings.rs  base_description.rs  base_game_version.rs  block_pos.rs  camera_instruction.rs  camera_preset.rs  camera_presets.rs  chunk_pos.rs  command_origin_data.rs  container_mix_data_entry.rs  crafting_data_entry.rs  data_item.rs  dimension_definition_group.rs  edu_shared_uri_resource.rs  education_level_settings.rs  entity_net_id.rs  experiments.rs  game_rules_changed_packet_data.rs  inventory_action.rs  inventory_source.rs  inventory_transaction.rs  item_data.rs  item_enchants.rs  item_stack_request_slot_info.rs  item_stack_response_container_info.rs  item_stack_response_info.rs  item_stack_response_slot_info.rs  level_settings.rs  map_decoration.rs  map_item_tracked_actor_unique_id.rs  material_reducer_data_entry.rs  mod.rs  molang_variable_map.rs  move_actor_absolute_data.rs  move_actor_delta_data.rs  network_block_position.rs  network_item_instance_descriptor.rs  (+25 more)
crates/protocol/src/version/v671/: mod.rs
crates/protocol/src/version/v671/enums/: actor_flags.rs  level_sound_event_type.rs  mod.rs  particle_type.rs  prediction_type.rs
crates/protocol/src/version/v671/packets/: client_bound_debug_renderer.rs  correct_player_move_prediction.rs  mod.rs  (+3 more)
crates/protocol/src/version/v685/: mod.rs
crates/protocol/src/version/v686/: mod.rs
crates/protocol/src/version/v712/: mod.rs
crates/protocol/src/version/v729/: mod.rs
crates/protocol/src/version/v748/: mod.rs
crates/protocol/src/version/v766/: mod.rs
crates/protocol/src/version/v776/: mod.rs
crates/protocol/src/version/v786/: mod.rs
crates/protocol/src/version/v800/: mod.rs
crates/protocol/src/version/v818/: mod.rs
crates/protocol/src/version/v819/: mod.rs
crates/protocol/src/version/v827/: mod.rs
crates/protocol/src/version/v844/: mod.rs
crates/protocol/src/version/v859/: mod.rs
crates/protocol/src/version/v898/: mod.rs
crates/protocol/src/version/v924/: mod.rs
crates/protocol/src/version/v944/: mod.rs
crates/protocol/src/version/v975/: mod.rs
crates/protocol_core/: Cargo.toml
crates/protocol_core/src/: endian.rs  header.rs  lib.rs  meta.rs  sub_client.rs  unknown.rs
crates/protocol_core/src/types/: bool.rs  int.rs  option.rs  slice.rs  string.rs  tuple.rs  uuid.rs  vec.rs  xuid.rs
crates/shared/: Cargo.toml
crates/shared/src/: actor_runtime_id.rs  actor_unique_id.rs
crates/shared/src/world/: difficulty.rs  dimension.rs  editor_world_type.rs  gamemode.rs  generator_type.rs  permissions_level.rs
(+332 files in other folders)
