[package]
name = "bedrock_addon"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
semver = { workspace = true }

image = { workspace = true }

vek = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
json_comments = { workspace = true }

walkdir = { workspace = true }
