[package]
name = "bedrock_level"
version = "0.1.0"
edition = "2024"

[features]
# default = ["rusty-leveldb"]
default = ["mojang-leveldb"]
mojang-leveldb = ["dep:leveldb-sys"]
# rusty-leveldb = ["dep:rusty-leveldb", "dep:miniz_oxide"]

[[bench]]
name = "subchunk"
harness = false

[[bench]]
name = "unpack"
harness = false

[dependencies]
leveldb-sys = { git = "https://github.com/bedrock-crustaceans/leveldb-sys", optional = true }

bedrock_shared = { path = "../shared" }
nbtx = { workspace = true }

# rusty-leveldb = { git = "https://github.com/bedrock-crustaceans/leveldb-rs", optional = true }
# miniz_oxide = { version = "0.9.0", optional = true }

thiserror = { workspace = true }
serde = { workspace = true }
byteorder = { workspace = true }
bytemuck = { workspace = true }
smallvec = "1.15.1"
rustc-hash = "2.1.1"
nohash-hasher = "0.2.0"

[dev-dependencies]
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
