[package]
name = "bedrock_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bedrock_protocol_core = { path = "../protocol_core" }
bedrock_macros = { path = "../macros" }

tracing = { workspace = true }

byteorder = { workspace = true }
varint-rs = { workspace = true }
serde.workspace = true
